--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -13,9 +13,8 @@
     <body>
         <header>
             <a href="/historicosFecha" class="links">Consulta por fecha</a>
-            <a href="/historicosRango" class="links" style="left: 166px;" >Consulta por rango</a>
-            <div style="margin: 0 auto; border-radius: 20px; background-color: #fff; padding: 5px 15px">
-                <img src="/Taxi_Location.png" alt="Logo" height="80px">
+            <div style="margin: 0 auto; border-radius: 20px; background-color: rgba(255, 255, 255, 0); padding: 5px 15px">
+                <h1><img src="/Taxi_Location.png" alt="Logo" height="50px"/>Taxi Location</h1>
             </div>
         </header>
         <div class="divHome">
