--- a/pagina_web/record.html
+++ b/pagina_web/record.html
@@ -13,9 +13,9 @@
     <body>
         <header>
             <a href="/" class="links">Tiempo real</a>
-            <a href="/historicosRango" class="links" style="left: 166px;" >Consulta por rango</a>
-            <div style="margin: 0 auto;">
-                <img src="/Taxi_Location.png" alt="Logo" height="80px">
+            <a href="/historicosRango" class="links" style="left: 120px;" >Consulta por rango</a>
+            <div style="margin: 0 auto; border-radius: 20px; background-color: rgba(255, 255, 255, 0); padding: 5px 15px">
+                <h1><img src="/Taxi_Location.png" alt="Logo" height="50px"/>Taxi Location</h1>
             </div>
         </header>
 
