--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -30,6 +30,9 @@
     
             <label class="labels">Hora:</label>
             <label id="timeID" class="labelHome"></label>
+
+            <label class="labels">rpm:</label>
+            <label id="rpmID" class="labelHome"></label>
         </div>
 
 
