datos del otro carro

--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -17,6 +17,13 @@
                 <h1><img src="/Taxi_Location.png" alt="Logo" height="50px"/>Taxi Location</h1>
             </div>
         </header>
+        <div class="selectList-container">
+            <select name="color" id="color" class="selectList">
+                <option class="list-item" value="r">Rojo</option>
+                <option class="list-item" value="a">Azul</option>
+                <option class="list-item" value="v">Verde</option>
+            </select>
+        </div>
         <div class="divHome">
             <label class="labels">Latitud:</label>
             <label id="latID" class="labelHome"></label>
@@ -54,5 +61,6 @@
                       
         </script>
         <script src="./showInfo.js"></script>
+        <script src="./selectList.js"></script>
     </body>
 </html>
