--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -18,10 +18,9 @@
             </div>
         </header>
         <div class="selectList-container">
-            <select name="color" id="color" class="selectList">
-                <option class="list-item" value="r">Rojo</option>
-                <option class="list-item" value="a">Azul</option>
-                <option class="list-item" value="v">Verde</option>
+            <select id="inputPlaca" class="selectList" onchange="showData(true)">
+                <option class="list-item" value="UZC716">UZC 716</option>
+                <option class="list-item" value="KJL236">KJL 236</option>
             </select>
         </div>
         <div class="divHome">
