--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -21,6 +21,7 @@
             <select id="inputPlaca" class="selectList" onchange="showData(true)">
                 <option class="list-item" value="UZC716">UZC 716</option>
                 <option class="list-item" value="KJL236">KJL 236</option>
+                <option class="list-item" value="Todos">Todos</option>
             </select>
         </div>
         <div class="divHome">
