nueva imagen(html)

--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -11,17 +11,32 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header>
-            <a href="/historicosFecha" class="links">Consulta por fecha</a>
-            <div style="margin: 0 auto; border-radius: 20px; background-color: rgba(255, 255, 255, 0); padding: 5px 15px">
-                <h1><img src="/Taxi_Location.png" alt="Logo" height="50px"/>Taxi Location</h1>
+        <header>            
+            <div style="margin: 0 auto; border-radius: 20px; background-color: rgb(255, 204, 45); padding-top: 5px;">
+                <h1>
+                    <b>
+                      <a
+                        href="/" class="negros" >
+                        <img src="/Taxi_Location.png" alt="Logo" height="50px" />Taxi Location
+                      </a>
+                    </b>
+                  </h1>
             </div>
         </header>
+
+        <dl>
+            <ld><a href="/" class="blancos">Inicio</a></ld>
+            <ld><a class="active" href="/TiempoReal" class="blancos">Tiempo Real</a></ld>
+            <ld><a href="/Historicos" class="blancos">Historicos</a></ld>
+            <ld style="float:right" class="blancos"><a href="/about">About</a></ld>
+        </dl>
+
         <div class="selectList-container">
+            Seleccione el vehiculo:  
             <select id="inputPlaca" class="selectList" onchange="getTaxiInfo(true)">
                 <option class="list-item" value="UZC716">UZC 716</option>
                 <option class="list-item" value="KJL236">KJL 236</option>
-                <option class="list-item" value="2">Todos</option>
+                <option class="list-item" value="2">All</option>
             </select>
         </div>
         <div class="divHome">
@@ -80,4 +95,7 @@
         <script src="./showInfo.js"></script>
         <script src="./selectList.js"></script>
     </body>
+    <div id="copyright">
+        Designed with love &hearts;
+    </div>
 </html>
