--- a/pagina_web/about.html
+++ b/pagina_web/about.html
@@ -54,18 +54,11 @@
           <div class="image-wrapper">
             <img class="img-responsive something-img" src="/taxisblur.jpg" />
             <div class="col-sm-8 something-text text-center">
-              <h1>Quienes somos</h1>
-              <p>Answer the phone
-                "Harry, you're no good alone
-                Why are you sitting at home on the floor?
-                What kind of pills are you on?"
-                Ringin' the bell
-                And nobody's coming to help
-                Your daddy lives by himself
-                He just wants to know that you're well, oh-oh-oh
+              <h1>Que hacemos</h1>
+              <p>Taxi Location es una plataforma que permite el rastreo de varios vehículos de servicio público (Taxi). La plataforma cuenta con dos secciones principales: tiempo real e históricos. En tiempo real, encontraremos el recorrido en vivo de los vehículos registrados. En esta se podrá visualizar datos como latitud, longitud, fecha, hora y los rpm que van registrando los vehículos. Por otra parte, en la sección de históricos se encontrará la búsqueda por fechas, es decir, el usuario podrá ingresar un rango de fechas y podrá visualizar las rutas de los vehículos en ese espacio de tiempo. Así mismo, se podrá ver los datos del vehículo según la zona escogida por el usuario, dentro de los parámetros de las fechas previamente escogidas.
               </p>
-             
-              </p>
+              <h2>Ingenieros encargados:</h2>
+              <p>Maria Alvarez, Natalia Castillo, Khaled DasuKi, Roberto Rios</p>
             </div>
           </div>
         </div>
