about us y tildes

--- a/pagina_web/frontpage.html
+++ b/pagina_web/frontpage.html
@@ -27,7 +27,7 @@
 <ul>
   <li><a class="active" href="/" class="blancos">Inicio</a></li>
   <li><a href="/TiempoReal" class="blancos">Tiempo Real</a></li>
-  <li><a href="/Historicos" class="blancos">Historicos</a></li>
+  <li><a href="/Historicos" class="blancos">Históricos</a></li>
   <li style="float:right" class="blancos"><a href="/about">About</a></li>
 </ul>
 
