--- a/pagina_web/paginaweb.html
+++ b/pagina_web/paginaweb.html
@@ -27,7 +27,7 @@
         <dl>
             <ld><a href="/" class="blancos">Inicio</a></ld>
             <ld><a class="active" href="/TiempoReal" class="blancos">Tiempo Real</a></ld>
-            <ld><a href="/Historicos" class="blancos">Historicos</a></ld>
+            <ld><a href="/Historicos" class="blancos">Históricos</a></ld>
             <ld style="float:right" class="blancos"><a href="/about">About</a></ld>
         </dl>
 
