--- a/pagina_web/about.html
+++ b/pagina_web/about.html
@@ -27,26 +27,12 @@
 <ul>
   <li><a href="/" class="blancos">Inicio</a></li>
   <li><a href="/TiempoReal" class="blancos">Tiempo Real</a></li>
-  <li><a href="/Historicos" class="blancos">Historicos</a></li>
+  <li><a href="/Historicos" class="blancos">Históricos</a></li>
   <li style="float:right" class="blancos"><a class="active" href="/about">About</a></li>
 </ul>
 
 
 </body>
-<!-- <div class="container">
-    <img src="taxisblur.jpg" alt="Taxi" class="responsive">
-    <div class="text-block">
-      <h1>Quienes somos</h1>
-      <p>Answer the phone<br>
-        "Harry, you're no good alone<br>
-        Why are you sitting at home on the floor?<br>
-        What kind of pills are you on?"<br>
-        Ringin' the bell<br>
-        And nobody's coming to help<br>
-        Your daddy lives by himself<br>
-        He just wants to know that you're well, oh-oh-oh</p>
-    </div>
-</div> -->
 <div class="container-fluid something-container">
     <div class="row">
       <div class="container">
@@ -54,8 +40,9 @@
           <div class="image-wrapper">
             <img class="img-responsive something-img" src="/taxisblur.jpg" />
             <div class="col-sm-8 something-text text-center">
-              <h1>Que hacemos</h1>
+              <h1>About us</h1>
               <p>Taxi Location es una plataforma que permite el rastreo de varios vehículos de servicio público (Taxi). La plataforma cuenta con dos secciones principales: tiempo real e históricos. En tiempo real, encontraremos el recorrido en vivo de los vehículos registrados. En esta se podrá visualizar datos como latitud, longitud, fecha, hora y los rpm que van registrando los vehículos. Por otra parte, en la sección de históricos se encontrará la búsqueda por fechas, es decir, el usuario podrá ingresar un rango de fechas y podrá visualizar las rutas de los vehículos en ese espacio de tiempo. Así mismo, se podrá ver los datos del vehículo según la zona escogida por el usuario, dentro de los parámetros de las fechas previamente escogidas.
+              Todo con el objetivo de facilitar el control de flota de taxis.
               </p>
               <h2>Ingenieros encargados:</h2>
               <p>Maria Alvarez, Natalia Castillo, Khaled DasuKi, Roberto Rios</p>
